coding-commit: Внесены корректировки в классы DynamicRule, DynamicRuleService, RuleCondition. Обновлен master.yaml